--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"@tauri-apps/cli": ">=2.0.0",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.5",
-		"svelte": "^4.2.7",
+		"svelte": "5.0.0-next.260",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
